/cp 2012-01-02  Paolo Carlini  <paolo.carlini@oracle.com>

PR c++/20140
	* typeck2.c (digest_init_r): Use copy_init when initializing
	an array of chars.

/testsuite
2012-01-02  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/20140
	* g++.dg/template/init9.C: New.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@182805 138bc75d-0d04-0410-961f-82ee72b054a4