gcc/testsuite/g++.dg/template/init9.C
@@ -1,0 +1,12 @@
+// PR c++/20140
+
+template<typename T> void foo()
+{
+  unsigned char s[] = "";
+}
+
+int main()
+{
+  foo<char>();
+  foo<int>();
+}
